--- a/data/wifimanager.html
+++ b/data/wifimanager.html
@@ -19,7 +19,7 @@
             <label for="ssid">Wifi名</label>
             <input type="text" id ="ssid" name="ssid" value="Mars4"><br>
             <label for="pass">密码</label>
-            <input type="text" id ="pass" name="pass" value="Zerolone"><br>
+            <input type="text" id ="pass" name="pass" value=""><br>
             
             <!--
             设备IP设置
