--- a/data/wifimanager.html
+++ b/data/wifimanager.html
@@ -43,7 +43,7 @@
       </div>
     </div>
   </div>
-  中技云第九波
+  中技云第十波
 <script language="javascript">
       // 获取按钮和要隐藏的元素
       var btnShow  = document.getElementById('ipman');
